Prune ChatUtils and related uses
Prunes a lot of unused and deprecated utilities related to chat
components, as well as improving others.